添加格式化属性名称